[gd_scene load_steps=12 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://depth.tscn" type="PackedScene" id=2]
[ext_resource path="res://shaderMatkaWithOcean.tres" type="Material" id=3]
[ext_resource path="res://cam_origin.gd" type="Script" id=4]

[sub_resource type="CapsuleShape" id=8]
radius = 0.302922
height = 0.854183

[sub_resource type="CapsuleMesh" id=9]

[sub_resource type="CubeMesh" id=3]

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0, 0.952941, 1, 1 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.733333, 0, 1, 1 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.00784314, 1, 0, 1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 0, 0, 1 )

[node name="player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.604261, 0 )
shape = SubResource( 8 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.25, 0, 0, 0, -1.09278e-08, -0.5, 0, 0.25, -2.18557e-08, 0, -0.618207, 0 )
mesh = SubResource( 9 )
material/0 = null

[node name="Spatial" type="Spatial" parent="."]

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 5 )
visible = false
mesh = SubResource( 3 )
material/0 = SubResource( 5 )

[node name="Y-indi" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 5 )
visible = false
mesh = SubResource( 3 )
material/0 = SubResource( 5 )

[node name="X-indi" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 5 )
visible = false
mesh = SubResource( 3 )
material/0 = SubResource( 6 )

[node name="Z-indi" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 5 )
visible = false
mesh = SubResource( 3 )
material/0 = SubResource( 7 )

[node name="MeshInstance4" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 5 )
visible = false
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance5" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
visible = false
mesh = SubResource( 3 )
material/0 = null

[node name="X" type="Spatial" parent="."]

[node name="Y" type="Spatial" parent="X"]

[node name="Z" type="Spatial" parent="X/Y"]
transform = Transform( -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, 0, 0 )

[node name="pre_cam_origin" type="Spatial" parent="X/Y/Z"]

[node name="cam_origin" type="Spatial" parent="X/Y/Z/pre_cam_origin"]
script = ExtResource( 4 )

[node name="Camera" type="Camera" parent="X/Y/Z/pre_cam_origin/cam_origin"]
transform = Transform( 1, -9.44539e-10, -1.28163e-08, -9.44539e-10, 0.989196, -0.146601, 1.28163e-08, 0.146601, 0.989196, -4.95781e-08, -0.567115, 5.66672 )
current = true
fov = 90.0
near = 0.01
far = 8375.3

[node name="MeshInstance3" parent="X/Y/Z/pre_cam_origin/cam_origin/Camera" instance=ExtResource( 2 )]
transform = Transform( 1, -1.39888e-14, -1.77636e-15, -2.73115e-14, 1, 2.98023e-08, 3.55271e-15, -4.47035e-08, 1, 6.44067e-06, 73.6725, 497.108 )
visible = false
material/0 = ExtResource( 3 )

[node name="MeshInstance3" type="MeshInstance" parent="X/Y/Z/pre_cam_origin/cam_origin"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, -4.41043 )
visible = false
mesh = SubResource( 3 )
skeleton = NodePath("../../../../../..")
material/0 = SubResource( 4 )

[node name="RayCast" type="RayCast" parent="X/Y/Z/pre_cam_origin/cam_origin"]
transform = Transform( -1, -8.74228e-08, 0, 8.74228e-08, -1, 0, 0, 0, 1, 0, 0, 0 )
enabled = true
collision_mask = 3
